--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
+:root {
+    --palette-color-1: #3DB2FF;
+    --palette-color-2: #FFEDDA;
+    --palette-color-3: #FFB830;
+    --palette-color-4: #FF2442;
+}
+
+@font-face {
+    font-family: "Montserrat";
+    src: url(Montserrat/Montserrat-Regular.ttf);
+}
+
 body {
-    margin: 0;
+    font-family: "Montserrat";
+    background-color: var(--palette-color-1);
 }
