--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,115 @@
-h1 {
-  font-family: "Roboto Mono", monospace;
+:root {
+  font-size: 16px;
   font-family: "Roboto", sans-serif;
+  --text-primary: #b6b6bb;
+  --text-secondary: #ececec;
+  --bg-primary: #23232e;
+  --bg-secondary: #141418;
+  --transition-speed: 200ms;
+}
+
+body {
+  color: black;
+  background-color: white;
+  margin: 0;
+  padding: 0;
+}
+
+body::-webkit-scrollbar {
+  width: 0.25rem;
+}
+
+body::-webkit-scrollbar-track {
+  background: #1e1e24;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #6649b8;
+}
+
+main {
+  margin-left: 5rem;
+  padding: 1rem;
+}
+
+.navbar {
+  position: fixed;
+  background: var(--bg-primary);
+  width: 5rem;
+  transition: width var(--transition-speed) ease;
+  overflow: scroll;
+  height: 100%;
+}
+
+.navbar:hover {
+  width: 15rem;
+}
+
+.navbar-nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.nav-item {
+  width: 100%;
+}
+
+.nav-link {
+  display: flex;
+  align-items: center;
+  height: 5rem;
+  text-decoration: none;
+  color: var(--text-primary);
+  filter: grayscale(100%) opacity(0.7);
+  transition: var(--transition-speed);
+}
+
+.nav-link:hover {
+  filter: grayscale(0%) opacity(1);
+  color: var(--text-secondary);
+  background: var(--bg-secondary);
+}
+
+.nav-link svg {
+  height: 2rem;
+  width: 2rem;
+  color: var(--text-secondary);
+}
+
+.nav-link svg:not(.logo-arrow) {
+  margin: 0 1.5rem;
+}
+
+.name-logo {
+  display: none;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: var(--text-secondary);
+  font-size: 1.5rem;
+  letter-spacing: 0.3ch;
+  width: 100%;
+  margin-left: 1.5rem;
+}
+
+.navbar:hover .name-logo {
+  display: unset;
+}
+
+.logo-arrow {
+  margin-left: auto;
+  margin-right: 1.5rem;
+}
+
+.navbar:hover .logo-arrow {
+  transform: rotate(180deg);
+}
+
+.link-text {
+  margin-left: 1.25rem;
+  width: 8.75rem;
+  white-space: nowrap;
 }
