--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,11 @@
 :root {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
-  --text-primary: #b6b6bb;
-  --text-secondary: #ececec;
-  --bg-primary: #23232e;
-  --bg-secondary: #141418;
-  --transition-speed: 200ms;
+  --navbar-text-primary: #b6b6bb;
+  --navbar-text-secondary: #ececec;
+  --navbar-bg-primary: #23232e;
+  --navbar-bg-secondary: #141418;
+  --transition-speed: 300ms;
 }
 
 body {
@@ -15,26 +15,104 @@ body {
   padding: 0;
 }
 
-body::-webkit-scrollbar {
-  width: 0.25rem;
-}
-
-body::-webkit-scrollbar-track {
-  background: #1e1e24;
-}
-
-body::-webkit-scrollbar-thumb {
-  background: #6649b8;
+h1 {
+  margin: 0;
 }
 
 main {
   margin-left: 5rem;
-  padding: 1rem;
+  padding: 0;
+}
+
+main section {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100%;
+}
+
+.title-section {
+  background: conic-gradient(
+    from 90deg at 12.5% 60vh,
+    #f69d3c,
+    10deg,
+    #3f87a6,
+    350deg,
+    #ebf8e1
+  );
+}
+
+.title-section svg {
+  color: #ebf8e1;
+  height: 2.5rem;
+  position: absolute;
+  left: 50%;
+  bottom: 7vh;
+  transform: translateX(-50%);
+  animation: scrolldown 1s linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes scrolldown {
+  from {
+    bottom: 8vh;
+  }
+  to {
+    bottom: 7vh;
+  }
+}
+
+.title-header {
+  text-align: center;
+  color: #ebf8e1;
+  border-radius: 10px;
+  position: absolute;
+  left: 50%;
+  top: 40vh;
+  transform: translate(-50%, -50%);
+}
+
+.title-header h1:first-child {
+  font-size: 6rem;
+  letter-spacing: 0.1ch;
+  text-transform: uppercase;
+}
+
+.title-header hr {
+  margin: 0 auto;
+  height: 0.3rem;
+  width: 20%;
+  background-color: #ebf8e1;
+  border: none;
+}
+
+.title-header h1:not(:first-child) {
+  margin: 0.5rem 0;
+  font-family: "Roboto Mono", monospace;
+  height: 6rem;
+  font-size: 2rem;
+}
+
+.about-section {
+  background-color: inherit;
+}
+
+.about-section h1 {
+  margin: 0 auto;
+}
+
+.project-section {
+  background-color: maroon;
+}
+
+.contact-section {
+  background-color: inherit;
 }
 
 .navbar {
   position: fixed;
-  background: var(--bg-primary);
+  background: var(--navbar-bg-primary);
   width: 5rem;
   transition: width var(--transition-speed) ease;
   overflow: scroll;
@@ -46,9 +124,6 @@ main {
 }
 
 .navbar-nav {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -58,58 +133,55 @@ main {
   width: 100%;
 }
 
+.nav-item:first-child svg {
+  position: absolute;
+  right: 0;
+}
+
+.nav-item:first-child span {
+  position: relative;
+  left: 1.5rem;
+  width: 8.5rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  letter-spacing: 0.3ch;
+}
+
+.test {
+  height: 7.5rem;
+  background-color: red;
+}
+
+.navbar:hover .nav-item:first-child svg {
+  transform: rotateY(180deg);
+}
+
 .nav-link {
   display: flex;
   align-items: center;
-  height: 5rem;
+  height: 7.5rem;
   text-decoration: none;
-  color: var(--text-primary);
+  color: var(--navbar-text-primary);
   filter: grayscale(100%) opacity(0.7);
   transition: var(--transition-speed);
 }
 
+.nav-link svg {
+  width: 5rem;
+  font-size: 2rem;
+  color: var(--navbar-text-secondary);
+}
+
+.nav-link span:not(.nav-item:first-child span) {
+  position: fixed;
+  left: 6rem;
+  font-size: 1.1rem;
+  white-space: nowrap;
+}
+
 .nav-link:hover {
   filter: grayscale(0%) opacity(1);
-  color: var(--text-secondary);
-  background: var(--bg-secondary);
-}
-
-.nav-link svg {
-  height: 2rem;
-  width: 2rem;
-  color: var(--text-secondary);
-}
-
-.nav-link svg:not(.logo-arrow) {
-  margin: 0 1.5rem;
-}
-
-.name-logo {
-  display: none;
-  font-weight: bold;
-  text-transform: uppercase;
-  color: var(--text-secondary);
-  font-size: 1.5rem;
-  letter-spacing: 0.3ch;
-  width: 100%;
-  margin-left: 1.5rem;
-}
-
-.navbar:hover .name-logo {
-  display: unset;
-}
-
-.logo-arrow {
-  margin-left: auto;
-  margin-right: 1.5rem;
-}
-
-.navbar:hover .logo-arrow {
-  transform: rotate(180deg);
-}
-
-.link-text {
-  margin-left: 1.25rem;
-  width: 8.75rem;
-  white-space: nowrap;
+  color: var(--navbar-text-secondary);
+  background: var(--navbar-bg-secondary);
 }
